package ru.beryukhov.mpp.domain

interface TimeSheetRepository {

}
