//UML class diagram can be opened with PlantUML plugin

@startuml
interface TimeSheetInteractor{
+getDatesList()
+addStartTime()
+addEndTime()
-timeSheetRepository
}

class TimeSheetInteractorImpl

class TimeSheetPresenter{
-timeSheetInteractor
+onCreateView()
+onFixStart()
+onFixEnd()
+onItemClick()
}

interface TimeSheetView{
-timeSheetPresenterKmp
+addAll()
+clear()
+showError()
+showProgress()
+hideProgress()
}



TimeSheetInteractor --> TimeSheetRepository: DI
TimeSheetInteractor <-- TimeSheetPresenter
TimeSheetPresenter <-- TimeSheetView
TimeSheetInteractor <|- TimeSheetInteractorImpl
TimeSheetPresenter --> TimeSheetView

class MainActivity
class JsView

interface TimeSheetRepository

TimeSheetView <|-- MainActivity
TimeSheetView <|-- JsView
TimeSheetView <|-- ViewController



@enduml